--- a/nextjs-error-reporting-setup-sentry/package.json
+++ b/nextjs-error-reporting-setup-sentry/package.json
@@ -11,7 +11,7 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch --passWithNoTests",
     "test:update-snapshots": "jest --updateSnapshot",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org akadenia --project akadenia-owl ./.next && sentry-cli sourcemaps upload --org akadenia --project akadenia-owl ./.next"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org akadenia --project test ./.next && sentry-cli sourcemaps upload --org akadenia --project test ./.next"
   },
   "dependencies": {
     "@akadenia/api": "^1.0.1",
@@ -27,7 +27,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
-    "@sentry/nextjs": "^8.2.1",
+    "@sentry/nextjs": "^8.55.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-table": "^8.17.3",
